--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,7 +80,7 @@
 
         <!-- Interests Section -->
         <div class="mb-8">
-          <h2 class="text-2xl font-semibold mb-4">Other things</h2>
+          <h2 class="text-2xl font-semibold mb-4">I like</h2>
           <div class="grid gap-4">
             <div class="flex items-center gap-2">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-primary" viewBox="0 0 24 24" fill="none"
@@ -94,7 +94,7 @@
                 <line x1="17" y1="17" x2="22" y2="17"></line>
                 <line x1="17" y1="7" x2="22" y2="7"></line>
               </svg>
-              <span>I like movies</span>
+              <span>watching movies</span>
             </div>
             <div class="flex items-center gap-2">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-primary" viewBox="0 0 24 24" fill="none"
@@ -104,7 +104,7 @@
               </svg>
               <span>I play
                 <a href="https://www.youtube.com/watch?v=L2i8sQHUWEs" target="_blank"
-                  class="link link-primary">fingerstyle guitar</a>
+                  class="link link-primary">playing fingerstyle guitar</a>
               </span>
             </div>
             <div class="flex items-center gap-2">
