--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,7 +102,7 @@
                 <path d="M12 8a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1"></path>
                 <path d="M19 8a1 1 0 0 0-1-1h-6a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1"></path>
               </svg>
-              <span>I play
+              <span>
                 <a href="https://www.youtube.com/watch?v=L2i8sQHUWEs" target="_blank"
                   class="link link-primary">playing fingerstyle guitar</a>
               </span>
