--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
             <div class="badge badge-primary badge-lg">Observability</div>
             <div class="badge badge-primary badge-lg">Testing</div>
           </div>
-          <div class="mt-4">
+          <!-- <div class="mt-4">
             <a href="https://github.com/giacomorebonato/fastivite" target="_blank" class="btn btn-outline btn-primary">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -75,7 +75,7 @@
               </svg>
               Check out fastivite
             </a>
-          </div>
+          </div> -->
         </div>
 
         <!-- Interests Section -->
