--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,11 +33,11 @@
       <div class="card-body">
         <!-- Header Section -->
         <div class="flex flex-col items-center mb-8">
-          <img src="/public/logo.webp" alt="A profile picture of Giacomo Rebonato"
+          <img src="/logo.webp" alt="A profile picture of Giacomo Rebonato"
             class="rounded-full w-48 h-48 mb-4 ring ring-primary ring-offset-2" />
           <h1 class="text-3xl font-bold mb-2">Giacomo Rebonato</h1>
           <div class="flex items-center gap-2">
-            <a href="https://github.com/giacomorebonato/giacomo-rebonato-new" target="_blank"
+            <a href="https://github.com/giacomorebonato" target="_blank" rel="noopener"
               class="btn btn-primary btn-sm">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -65,17 +65,6 @@
             <div class="badge badge-primary badge-lg">Observability</div>
             <div class="badge badge-primary badge-lg">Testing</div>
           </div>
-          <!-- <div class="mt-4">
-            <a href="https://github.com/giacomorebonato/fastivite" target="_blank" class="btn btn-outline btn-primary">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
-                <line x1="8" y1="21" x2="16" y2="21"></line>
-                <line x1="12" y1="17" x2="12" y2="21"></line>
-              </svg>
-              Check out fastivite
-            </a>
-          </div> -->
         </div>
 
         <!-- Interests Section -->
@@ -103,7 +92,7 @@
                 <path d="M19 8a1 1 0 0 0-1-1h-6a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1"></path>
               </svg>
               <span>
-                <a href="https://www.youtube.com/watch?v=L2i8sQHUWEs" target="_blank"
+                <a href="https://www.youtube.com/watch?v=L2i8sQHUWEs" target="_blank" rel="noopener"
                   class="link link-primary">playing fingerstyle guitar</a>
               </span>
             </div>
@@ -124,7 +113,7 @@
         <div>
           <h2 class="text-2xl font-semibold mb-4">Contacts</h2>
           <div class="flex flex-wrap gap-2">
-            <a href="https://github.com/giacomorebonato/" target="_blank" class="btn btn-outline">
+            <a href="https://github.com/giacomorebonato/" target="_blank" rel="noopener" class="btn btn-outline">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path
@@ -133,7 +122,7 @@
               </svg>
               GitHub
             </a>
-            <a href="https://www.linkedin.com/in/giacomorebonato/" target="_blank" class="btn btn-outline">
+            <a href="https://www.linkedin.com/in/giacomorebonato/" target="_blank" rel="noopener" class="btn btn-outline">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
@@ -150,7 +139,7 @@
               </svg>
               Email
             </a>
-            <a href="https://www.threads.net/@finstamino" target="_blank" class="btn btn-outline">
+            <a href="https://www.threads.net/@finstamino" target="_blank" rel="noopener" class="btn btn-outline">
               Threads
             </a>
           </div>
